@@ -293,6 +293,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #1655: Make imaplib IPv6-capable. Patch by Derek Morr.
+
 - Issue #5918: Fix a crash in the parser module.
 
 - Issue #1664: Make nntplib IPv6-capable. Patch by Derek Morr.
